trained and tested new models

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ snli/.data
 snli/.vector_cache
 snli/results
 word_language_model/model.pt
+fast_neural_style/images
 fast_neural_style/saved_models
 fast_neural_style/saved_models.zip
 gcn/cora/
